fix: fixed map image height on mobile view

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -14,7 +14,7 @@
   }
 
   @include vp-767 {
-    padding-bottom: 26px;
+    padding-bottom: 65px;
     flex-direction: column-reverse;
     gap: 35px;
   }
@@ -30,6 +30,7 @@
   }
 
   @include vp-767 {
+    height: 316px;
     padding: 0 15px;
   }
 }
@@ -40,6 +41,10 @@
   @include vp-1023 {
     width: 324px;
     height: 355px;
+  }
+
+  @include vp-767 {
+    height: 316px;
   }
 }
 
